--- a/web/css/default.css
+++ b/web/css/default.css
@@ -127,6 +127,8 @@ div + p {padding-top: 15px;}
 /* desktop navigation */
 .showmenu .nav {display: block;}
 .showmenu .nav a {display: inline-block; border-bottom: 1px solid rgba(0,0,0,0.05); padding: 5px 0; width: 100%; text-decoration: none;}
+.showmenu .nav a img {position: absolute; margin-top: 2px; height: 17px; display: block;}
+.showmenu .nav a span {padding-left: 30px;}
 .showmenu .nav a:last-of-type {border-bottom: 0;}
 .showmenu .nav h3 {padding-top: 40px;}
 .onlymobile {display: block!important;}
