--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -76,10 +76,15 @@
             <div class="img" style="background-image: url(/img/address-book-green.svg);"></div>
             <span>Customers</span>
           </a>
-          <a href="settings/" title="Settings">
+          <a href="settings/" class="onlydesktop" title="Settings">
             <div class="img" style="background-image: url(/img/cog.svg);"></div>
             <div class="img" style="background-image: url(/img/cog-green.svg);"></div>
             <span>Settings</span>
+          </a>
+          <a href="menu/" class="onlymobile" title="More">
+            <div class="img" style="background-image: url(/img/ellipsis-h.svg);"></div>
+            <div class="img" style="background-image: url(/img/ellipsis-h-green.svg);"></div>
+            <span>Menu</span>
           </a>
 
           <div class="bottom">
