--- a/web/css/default.css
+++ b/web/css/default.css
@@ -152,6 +152,7 @@ div + p {padding-top: 15px;}
     .icons > div {display: block;}
     .icons > div a {display: block; margin: 1px auto; padding: 10px 40px;}
     .icons > div a .img {position: absolute; width: 25px; height: 25px;}
+    .icons > div a .img + .img {width: 25px;}
     .icons > div a span {display: inline-block; padding-left: 50px;}
     .icons > div a#branding {display: block; background: #fff; margin: 0 0 15px; padding: 0;}
     .icons > div a#branding > span {display: block; height: 140px; background: #fff url(/img/invoicelion.png) 10px center / contain no-repeat; opacity: 1;}
