--- a/templates/admin.phtml
+++ b/templates/admin.phtml
@@ -59,7 +59,7 @@
           <a href="deliveries" title="Deliveries">
             <div class="img" style="background-image: url(/img/box-alt.svg);"></div>
             <div class="img" style="background-image: url(/img/box-alt-green.svg);"></div>
-            <span>Hours</span>
+            <span>Deliveries</span>
           </a>
           <a href="subscriptions" title="Subscriptions">
             <div class="img" style="background-image: url(/img/repeat.svg);"></div>
