--- a/pages/settings/company/edit(admin).phtml
+++ b/pages/settings/company/edit(admin).phtml
@@ -1,25 +1,9 @@
 <?php Buffer::set('title','Settings'); ?>
-<h3><a href="/">Home</a></h3>
-<h1>Edit settings</h1>
+<h3><a href="/">Home</a> / <a href="settings">Settings</a></h3>
+<h1>Edit company settings</h1>
 
 <?php if (isset($error)): ?><div class="alert alert-danger"><button type="button" class="close">x</button><div class="message"><?php e($error); ?></div></div><?php endif; ?>
 <form method="post">
-
-		<h2>General settings</h2>
-
-		<div class="form-group <?php e(isset($errors['tenants[hours_active]'])?'has-error':''); ?>">
-		<label class="control-label" for="tenants[hours_active]">Time tracking</label>
-		<input class="form-control" name="tenants[hours_active]" type="checkbox" value="1" id="tenants[hours_active]" <?php if($data['tenants']['hours_active']) e('checked'); ?> />
-		<span class="help-block"><?php if (isset($errors['tenants[hours_active]'])) e($errors['tenants[hours_active]']); ?></span>
-		</div>
-	
-    <div class="form-group <?php e(isset($errors['tenants[subscriptions_active]'])?'has-error':''); ?>">
-		<label class="control-label" for="tenants[subscriptions_active]">Subscriptions</label>
-		<input class="form-control" name="tenants[subscriptions_active]" type="checkbox" value="1" id="tenants[subscriptions_active]" <?php if($data['tenants']['subscriptions_active']) e('checked'); ?> />
-		<span class="help-block"><?php if (isset($errors['tenants[subscriptions_active]'])) e($errors['tenants[subscriptions_active]']); ?></span>
-		</div>
-
-		<h2>Company settings</h2>
 
     <div class="form-group <?php e(isset($errors['tenants[name]'])?'has-error':''); ?>">
 		<label class="control-label" for="tenants[name]">Company name</label>
@@ -98,38 +82,6 @@
 		<input class="form-control" name="tenants[vat_number]" type="text" id="tenants[vat_number]" value="<?php e($data['tenants']['vat_number']); ?>" />
 		<span class="help-block"><?php if (isset($errors['tenants[vat_number]'])) e($errors['tenants[vat_number]']); ?></span>
     </div>
-
-		<h2>Invoice settings</h2>
-    
-		<div class="form-group <?php e(isset($errors['tenants[payment_period]'])?'has-error':''); ?>">
-		<label class="control-label" for="tenants[payment_period]">Payment period (in days)</label>
-		<input class="form-control" name="tenants[payment_period]" type="number" id="tenants[payment_period]" value="<?php e($data['tenants']['payment_period']); ?>"/>
-		<span class="help-block"><?php if (isset($errors['tenants[payment_period]'])) e($errors['tenants[payment_period]']); ?></span>
-		</div>
-
-		<div class="form-group <?php e(isset($errors['tenants[reminder_period]'])?'has-error':''); ?>">
-		<label class="control-label" for="tenants[reminder_period]">Reminder period (in days)</label>
-		<input class="form-control" name="tenants[reminder_period]" type="number" id="tenants[reminder_period]" value="<?php e($data['tenants']['reminder_period']); ?>"/>
-		<span class="help-block"><?php if (isset($errors['tenants[reminder_period]'])) e($errors['tenants[reminder_period]']); ?></span>
-		</div>
-
-		<div class="form-group <?php e(isset($errors['tenants[invoice_styles]'])?'has-error':''); ?>">
-		<label class="control-label" for="tenants[invoice_styles]">Invoice styles</label>
-		<textarea class="form-control" name="tenants[invoice_styles]" type="text" id="tenants[invoice_styles]"><?php e($data['tenants']['invoice_styles']); ?></textarea>
-		<span class="help-block"><?php if (isset($errors['tenants[invoice_styles]'])) e($errors['tenants[invoice_styles]']); ?></span>
-		</div>
-
-		<div class="form-group <?php e(isset($errors['tenants[invoice_template]'])?'has-error':''); ?>">
-		<label class="control-label" for="tenants[invoice_template]">Invoice template</label>
-		<textarea class="form-control" name="tenants[invoice_template]" type="text" id="tenants[invoice_template]"><?php e($data['tenants']['invoice_template']); ?></textarea>
-		<span class="help-block"><?php if (isset($errors['tenants[invoice_template]'])) e($errors['tenants[invoice_template]']); ?></span>
-		</div>
-
-		<div class="form-group <?php e(isset($errors['tenants[invoice_page_number]'])?'has-error':''); ?>">
-		<label class="control-label" for="tenants[invoice_page_number]">Invoice page number</label>
-		<textarea class="form-control" name="tenants[invoice_page_number]" type="text" id="tenants[invoice_page_number]"><?php e($data['tenants']['invoice_page_number']); ?></textarea>
-		<span class="help-block"><?php if (isset($errors['tenants[invoice_page_number]'])) e($errors['tenants[invoice_page_number]']); ?></span>
-		</div>
 
     <div class="form-group">
 		<button class="btn btn-primary" type="submit">Save</button>
