--- a/pages/settings/general/view(admin).phtml
+++ b/pages/settings/general/view(admin).phtml
@@ -1,5 +1,5 @@
 <?php Buffer::set('title','Settings'); ?>
-<h3>Home / Settings</h3>
+<h3>Home / <a href="/settings/">Settings</a></h3>
 <h1>General settings</h1>
 
 <p>Below you will find your preferences. You can set here if you want to enable time tracking, and you can enter the values that show up on your invoices.</p>
@@ -45,12 +45,12 @@
         </dl>
         <dl>
             <dt>Integrity</dt>
-            <dd><a href="tenants/check">check</a></dd>
+            <dd><a href="settings/general/check">check</a></dd>
         </dl>
 </div>
 
 <br />
 
 <p>
-	<a class="btn btn-primary" href="tenants/edit">Edit</a>
+	<a class="btn btn-primary" href="settings/general/edit">Edit</a>
 </p>
