--- a/web/css/default.css
+++ b/web/css/default.css
@@ -46,6 +46,7 @@ h1 + p {font-size: 132%; line-height: 1.5em; max-width: 700px;}
 .bold {font-weight: bold;}
 .text-center {text-align: center;}
 h1 {font-size: 45px; margin-bottom: 20px; line-height: 1em; font-weight: 900; letter-spacing: 0.5px;}
+h1:first-letter {text-transform: uppercase;}
 h1::after {
     display: block;
     content: "";
@@ -150,14 +151,14 @@ div + p {padding-top: 15px;}
     .content {margin: 0 auto; width: calc(100% - 500px); max-width: 1200px; position: relative; left: 130px;}
     .icons {position: fixed; left: 0; top: 0; bottom: auto; width: 260px; height: 100vh; border-top: 0; padding-top: 0; text-align: left;}
     .icons > div {display: block;}
-    .icons > div a {display: block; margin: 1px auto; padding: 10px 40px;}
+    .icons > div a {display: block; margin: 1px auto; padding: 10px 35px;}
     .icons > div a .img {position: absolute; width: 25px; height: 25px;}
     .icons > div a .img + .img {width: 25px;}
     .icons > div a span {display: inline-block; padding-left: 50px;}
     .icons > div a#branding {display: block; background: #fff; margin: 0 0 15px; padding: 0;}
-    .icons > div a#branding > span {display: block; height: 140px; background: #fff url(/img/invoicelion.png) 10px center / contain no-repeat; opacity: 1;}
+    .icons > div a#branding > span {display: block; height: 140px; background: #fff url(/img/invoicelion.png) 5px center / contain no-repeat; opacity: 1;}
     .onlydesktop, .icons div.bottom {display: block!important;}
-    .icons div.bottom {position: absolute; bottom: 30px; width: 100%;}
+    .icons div.bottom {position: absolute; bottom: 35px; width: 100%;}
     .onlymobile {display: none!important;}
 }
 
