--- a/web/css/default.css
+++ b/web/css/default.css
@@ -59,9 +59,8 @@ h2 {font-size: 30px; margin-bottom: 30px; line-height: 1em; font-weight: 900; le
 h3 {font-size: 18.4px; margin-bottom: 10px; line-height: 1.2em; font-weight: 700;}
 * + h3 {margin-top: 30px;}
 * + h2 {margin-top: 60px;}
-.btn-primary, .btn-danger, .btn-default {display: inline-block; background: #18b663; color: white!important; padding: 10px 15px 9px; font-weight: 700; font-size: 12px; border: 1px solid #18b663; text-transform: uppercase; border-radius: 20px; transition: all .2s ease-in-out; text-decoration: none;
-}
-.btn-default, .btn-primary:hover, .btn-danger {background: white; color: #18b663!important;}
+.btn-primary, .btn-danger, .btn-default {display: inline-block; background: #18b663; color: white!important; padding: 10px 15px; font-weight: 700; font-size: 12px; line-height: 1.5em; border: 1px solid #18b663; text-transform: uppercase; border-radius: 20px; text-decoration: none; cursor: pointer;}
+.btn-default, .btn-danger {background: white; color: #18b663!important;}
 h3 a {text-decoration: none;}
 .nav a:hover, .hover:hover, .hover:hover a {cursor: pointer; color: #18b663;}
 .pull-right {float: right;}
