--- a/pages/hours/index(admin).phtml
+++ b/pages/hours/index(admin).phtml
@@ -1,7 +1,7 @@
 <?php Buffer::set('title','Hours'); ?>
 <h3><a href="/">Home</a></h3>
 <h1>Hours <a href="hours/add" class="btn-primary">Add hours</a></h1>
-<table class="table responsive-minimal">
+<table class="table responsive-minimal" cellpadding="0" cellspacing="0">
   <thead>
     <tr>
       <th class="day">Day</th>
