--- a/pages/settings/index(admin).phtml
+++ b/pages/settings/index(admin).phtml
@@ -2,7 +2,7 @@
 <h3>Home</h3>
 <h1>Settings</h1>
 
-<p>Below you will find your preferences. You can set here if you want to enable time tracking, and you can enter the values that show up on your invoices.</p>
+<p>Below you will find your preferences. You can set here if you want to enable time tracking (hours) and subscriptions, and you can customize (the data on) your invoices.</p>
 
 <br />
 
