--- a/web/css/default.css
+++ b/web/css/default.css
@@ -30,10 +30,10 @@ a {background: transparent;}
 .icons > div a#branding {display: none;}
 .icons > div a .img {height: 24px; opacity: 1; display: block; width: auto; margin: 0px auto 3px;  background-repeat: no-repeat; background-position: center center; background-size: contain;}
 .icons > div a span {display: none;}
-.icons > div a:hover {color: #18b663;}
+.icons > div a:hover {background: #eee;}
 .icons > div a .img + .img {opacity: 0; position: absolute; top: 10px; width: 24px; width: 100%;}
-.icons > div a.active .img, .icons > div a:hover .img {opacity: 0;}
-.icons > div a.active .img + .img, .icons > div a:hover .img + .img {opacity: 1;}
+.icons > div a.active .img {opacity: 0;}
+.icons > div a.active .img + .img {opacity: 1;}
 .icons {display: block;}
 .overlay {position: fixed; top: 0; width: 100%; height: 100%; text-align: center; background: rgba(0,0,0,0.1); z-index: 10;}
 .overlay > div {position: absolute; top: 50%; padding: 0 20px; width: calc(100% - 40px); 
@@ -63,7 +63,6 @@ h3 {font-size: 18.4px; margin-bottom: 10px; line-height: 1.2em; font-weight: 700
 .btn-primary, .btn-danger, .btn-default {display: inline-block; background: #18b663; color: white!important; padding: 10px 15px; font-weight: 700; font-size: 12px; line-height: 1.5em; border: 1px solid #18b663; text-transform: uppercase; border-radius: 3px; text-decoration: none; cursor: pointer;}
 .btn-default, .btn-danger {background: white; color: #18b663!important;}
 h3 a {text-decoration: none;}
-.nav a:hover, .hover:hover, .hover:hover a {cursor: pointer; color: #18b663;}
 .pull-right {float: right;}
 h1 .btn-primary {font-size: 12px; line-height: 1.5em; margin-top: 5px; float: right; }
 @media (max-width: 800px) {
@@ -205,8 +204,10 @@ input[type="file"] { border:0; padding:0;}
 
 
 /* tables */
-table {width: 100%;}
-th, td {padding: 5px 0; text-align: left; border-bottom: 1px solid rgba(0,0,0,0.05); position: relative;}
+table {width: 100%; border: 0; border-collapse: collapse;}
+tr {border-bottom: 1px solid rgba(0,0,0,0.05);}
+tr.hover:hover {background: rgba(0,0,0,0.05); cursor: pointer; border-bottom: 1px solid transparent;}
+th, td {padding: 5px 0; text-align: left; position: relative;}
 td:before {
     content: '&nbsp;';
     visibility: hidden;
@@ -219,7 +220,7 @@ td span {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-tr:last-child td {border-bottom: 0px solid rgba(0,0,0,0.05);}
+tr:last-child {border-bottom: 0;}
 
 
 @media (max-width: 800px) {
